--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2854363002'>Replace AudioFifo with a deque of AudioBus in ATR::AudioEncoder</a></td><td>c.padhi</td></tr>
 <tr><td>2017-05-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2865113007'>Remove ScopedVector from media/base/</a></td><td>c.padhi</td></tr>
 <tr><td>2017-05-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2867013003'>Remove base::SupportsWeakPtr from {Audio,Video}Sender</a></td><td>c.padhi</td></tr>
 <tr><td>2017-05-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2854043002'>Make Range::TextQuads() to use ComputeTextBounds() template function.</a></td><td>tanvir.rizvi</td></tr>
