--- a/reviews.html
+++ b/reviews.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-05-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2876813004'>styleMap  SameObject</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-05-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2876813004'>styleMap  SameObject</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-05-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2881553002'>Add |texture_target_| and |pixel_format_| to media::PictureBuffer</a></td><td><a href='https://codereview.chromium.org/user/Chandan'>c.padhi</a></td><td>newbie</td></tr>
 <tr><td>2017-05-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2873683002'>PaymentHandler: Implement GetAllPaymentApps().</a></td><td><a href='https://codereview.chromium.org/user/zino'>jinho.bang</a></td><td>committer</td></tr>
 <tr><td>2017-05-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2881713002'>Reland Replace AudioFifo with a deque of AudioBus in ATR::AudioEncoder</a></td><td><a href='https://codereview.chromium.org/user/Chandan'>c.padhi</a></td><td>newbie</td></tr>
