--- a/reviews.html
+++ b/reviews.html
@@ -13,9 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2884523002'>[css-typed-om] thorw a syntaxError instead of typeError at Constructor of CSSUnitValue</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2884523002'>[css-typed-om] thorw a syntaxError instead of typeError at Constructor of CSSUnitValue</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2880133002'>PaymentHandler: Should not allow accessing PaymentManager in Extension.</a></td><td><a href='https://codereview.chromium.org/user/zino'>jinho.bang</a></td><td>committer</td></tr>
-<tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2884523002'>thorw syntaxError intead typeError.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
-<tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2884523002'>thorw syntaxError intead typeError.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2839993002'>Adding support for Smart GO NEXT feature in Android Chrome</a></td><td><a href='https://codereview.chromium.org/user/AKVT'>ajith.v</a></td><td>committer</td></tr>
 <tr><td>2017-05-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2877463002'>Move ComputeTextRects and ComputeTextQuads to VisibleUnits.</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
 <tr><td>2017-05-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2876813004'>[css-typed-om] styleMap should have SameObject extended attribute.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
