--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2877463002'>Move ComputeTextRects and ComputeTextQuads to VisibleUnits.</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2871263003'>Set |config_| only after decoder has been successfully configured</a></td><td>c.padhi</td></tr>
+<tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2876813004'>[css-typed-om] styleMap should have SameObject extended attribute.</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2868823002'>getElementsByTagName() should take a qualifiedName in parameter</a></td><td>shanmuga.m</td></tr>
 <tr><td>2017-05-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2867273003'>PaymentHandler: Replace GetAllManifests() with GetAllPaymentApps().</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-05-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2875043003'>Remove base::SupportsWeakPtr from FrameReceiver</a></td><td>c.padhi</td></tr>
