--- a/reviews_non_committers.html
+++ b/reviews_non_committers.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-05-15</td><td>chromium</td><td><a href='https://codereview.chromium.org/2880273002'>Remove Range::TextQuads() and instead use ComputeTextQuads.</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
+<tr><td>2017-05-15</td><td>chromium</td><td><a href='https://codereview.chromium.org/2881013003'>Move FrameSelection::CurrentForm() to ContextMenuClientImpl::CurrentForm</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
+<tr><td>2017-05-15</td><td>chromium</td><td><a href='https://codereview.chromium.org/2879233002'>[css-typed-om] Replace cssText with stringifier at CSSTransformComponent</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-05-15</td><td>chromium</td><td><a href='https://codereview.chromium.org/2879233002'>[css-typed-om] Replace cssText with stringifier at CSSTransformComponent</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-05-15</td><td>chromium</td><td><a href='https://codereview.chromium.org/2881713002'>Reland Replace AudioFifo with a deque of AudioBus in ATR::AudioEncoder</a></td><td><a href='https://codereview.chromium.org/user/Chandan'>c.padhi</a></td><td>newbie</td></tr>
 <tr><td>2017-05-15</td><td>chromium</td><td><a href='https://codereview.chromium.org/2884523002'>[css-typed-om] thorw a syntaxError instead of typeError at Constructor of CSSUnitValue</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-05-15</td><td>chromium</td><td><a href='https://codereview.chromium.org/2884523002'>[css-typed-om] thorw a syntaxError instead of typeError at Constructor of CSSUnitValue</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
