--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-16</td><td>chromium</td><td><a href='https://codereview.chromium.org/2879233002'>[css-typed-om] Replace cssText with stringifier at CSSTransformComponent</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-05-15</td><td>chromium</td><td><a href='https://codereview.chromium.org/2873903003'>PaymentHandler: Stop using GetAllManifests() in content side tests.</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2877463002'>Move ComputeTextRects and ComputeTextQuads to VisibleUnits.</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-05-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2871263003'>Set |config_| only after decoder has been successfully configured</a></td><td>c.padhi</td></tr>
