--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-18</td><td>chromium</td><td><a href='https://codereview.chromium.org/2877773002'>Remove base::SupportsWeakPtr and base::NonThreadSafe from PacedSender</a></td><td>c.padhi</td></tr>
 <tr><td>2017-05-17</td><td>chromium</td><td><a href='https://codereview.chromium.org/2875493003'>PaymentHandler: Remove PaymentAppManifest and PaymentAppOption.</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-05-16</td><td>chromium</td><td><a href='https://codereview.chromium.org/2884963002'>[css-typed-om] replace is2D() method with attribute in CSSTransformValue.</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-05-16</td><td>chromium</td><td><a href='https://codereview.chromium.org/2879233002'>[css-typed-om] Replace cssText with stringifier at CSSTransformComponent</a></td><td>hs1217.lee</td></tr>
