--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-19</td><td>chromium</td><td><a href='https://codereview.chromium.org/2881013003'>Move FrameSelection::CurrentForm() to ContextMenuClientImpl</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-05-19</td><td>chromium</td><td><a href='https://codereview.chromium.org/2833313003'>Pass clickEvent to controlElement inside label if target node can't start selection.</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-05-18</td><td>chromium</td><td><a href='https://codereview.chromium.org/2885243003'>[Android] Introduce state machine in stylus text selection</a></td><td>ajith.v</td></tr>
 <tr><td>2017-05-18</td><td>chromium</td><td><a href='https://codereview.chromium.org/2826043002'>Do not share FBOs/VAOs/Transform feedback objects across contexts</a></td><td>c.padhi</td></tr>
 <tr><td>2017-05-18</td><td>chromium</td><td><a href='https://codereview.chromium.org/2881713002'>Reland Replace AudioFifo with a deque of AudioBus in ATR::AudioEncoder</a></td><td>c.padhi</td></tr>
