--- a/reviews_non_committers.html
+++ b/reviews_non_committers.html
@@ -13,8 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
-<tr><td>2017-05-21</td><td>chromium</td><td><a href='https://codereview.chromium.org/2885103004'>1</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
-<tr><td>2017-05-21</td><td>chromium</td><td><a href='https://codereview.chromium.org/2885103004'>1</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-05-21</td><td>chromium</td><td><a href='https://codereview.chromium.org/2885103004'>Rewrite updateMarkerRenderedRect() to use EphemeralRange.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-05-21</td><td>chromium</td><td><a href='https://codereview.chromium.org/2885103004'>Rewrite updateMarkerRenderedRect() to use EphemeralRange.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-05-20</td><td>chromium</td><td><a href='https://codereview.chromium.org/2888403004'>[css-typed-om] replace all attribute with DOMMatrix in cssMatrixComponent</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-05-20</td><td>chromium</td><td><a href='https://codereview.chromium.org/2888403004'>[css-typed-om] replace all attribute with DOMMatrix in cssMatrixComponent</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-05-19</td><td>chromium</td><td><a href='https://codereview.chromium.org/2880353002'>Add webkit unit test case for ComputeTextQuads</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
