--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2885103004'>Rewrite UpdateMarkerRenderedRect() to use EphemeralRange.</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2891723002'>Do not create child node for Option constructor with no arguments/undefined/empty text.</a></td><td>shanmuga.m</td></tr>
 <tr><td>2017-05-21</td><td>chromium</td><td><a href='https://codereview.chromium.org/2884263002'>NodeFilter#acceptNode argument node should not be optional</a></td><td>tripta.g</td></tr>
 <tr><td>2017-05-19</td><td>chromium</td><td><a href='https://codereview.chromium.org/2881553002'>Add |texture_target_| and |pixel_format_| to media::PictureBuffer</a></td><td>c.padhi</td></tr>
