--- a/reviews.html
+++ b/reviews.html
@@ -13,7 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2874183002'>Fix Stylus selection with stylus button pressed from M os onwards</a></td><td><a href='https://codereview.chromium.org/user/MaheshMachavolu'>mahesh.ma</a></td><td>author</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2901513002'>ATRDeque</a></td><td><a href='https://codereview.chromium.org/user/Chandan'>c.padhi</a></td><td>newbie</td></tr>
+<tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2900603003'>Successful translation erroneously reported on page with too little text</a></td><td><a href='https://codereview.chromium.org/user/Gaja'>gajendra.n</a></td><td>author</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2893883002'>Update MaxColSpan to 1000.</a></td><td><a href='https://codereview.chromium.org/user/Shanmuga Pandi'>shanmuga.m</a></td><td>author</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2897633002'>Remove SetSelectedRange from ExpandSelectionToGranularity()</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
 <tr><td>2017-05-21</td><td>chromium</td><td><a href='https://codereview.chromium.org/2887713002'>PaymentHandler: Merge PaymentAppRequest and PaymentRequestEvent.</a></td><td><a href='https://codereview.chromium.org/user/zino'>jinho.bang</a></td><td>committer</td></tr>
@@ -29,7 +31,6 @@
 <tr><td>2017-05-19</td><td>chromium</td><td><a href='https://codereview.chromium.org/2892923002'>Remove SupportsWeakPtr from GPUTracer and CommandExecutor</a></td><td><a href='https://codereview.chromium.org/user/Chandan'>c.padhi</a></td><td>newbie</td></tr>
 <tr><td>2017-05-19</td><td>chromium</td><td><a href='https://codereview.chromium.org/2885793003'>** DO NOT COMMIT** Only for test</a></td><td><a href='https://codereview.chromium.org/user/zino'>jinho.bang</a></td><td>committer</td></tr>
 <tr><td>2017-05-17</td><td>chromium</td><td><a href='https://codereview.chromium.org/2888523002'>Created new target unit_tests in //media/formats.</a></td><td><a href='https://codereview.chromium.org/user/a.suchit'>a.suchit</a></td><td>committer</td></tr>
-<tr><td>2017-05-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2874183002'>Fix Stylus selection with stylus button pressed from M os onwards</a></td><td><a href='https://codereview.chromium.org/user/MaheshMachavolu'>mahesh.ma</a></td><td>author</td></tr>
 <tr><td>2017-05-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2699713003'>[WIP] RespondWithObserver</a></td><td><a href='https://codereview.chromium.org/user/zino'>jinho.bang</a></td><td>committer</td></tr>
 <tr><td>2017-05-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2866063004'>payment app android</a></td><td><a href='https://codereview.chromium.org/user/zino'>jinho.bang</a></td><td>committer</td></tr>
 <tr><td>2017-04-26</td><td>chromium</td><td><a href='https://codereview.chromium.org/2837823004'>Set active document url to &lt;template&gt; content URL.</a></td><td><a href='https://codereview.chromium.org/user/Shanmuga Pandi'>shanmuga.m</a></td><td>author</td></tr>
