--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2893303002'>Use SetSelection in InputMethodController::SetSelectionOffsets</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895583002'>PaymentHandler: Clear storage partition data during content_browsertests.</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2885103004'>Rewrite UpdateMarkerRenderedRect() to use EphemeralRange.</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2891723002'>Do not create child node for Option constructor with no arguments/undefined/empty text.</a></td><td>shanmuga.m</td></tr>
