--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2900773002'>Use SetSelection in ExecuteDeleteToMark</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2897633002'>Remove SetSelectedRange from ExpandSelectionToGranularity()</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2892923002'>Remove SupportsWeakPtr from GPUTracer and CommandExecutor</a></td><td>c.padhi</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2893303002'>Use SetSelection in InputMethodController::SetSelectionOffsets</a></td><td>tanvir.rizvi</td></tr>
