--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2898893002'>Use SetSelection in ExecuteSelectToMark()</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2899473003'>PaymentHandler: Remove unnecessary parameters in DidHasPaymentInstrument.</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2900773002'>Use SetSelection in ExecuteDeleteToMark</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2897633002'>Remove SetSelectedRange from ExpandSelectionToGranularity()</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-05-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2892923002'>Remove SupportsWeakPtr from GPUTracer and CommandExecutor</a></td><td>c.padhi</td></tr>
