--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2902693002'>Use base::Optional<int32_t> in H264POC::ComputePicOrderCnt(...)</a></td><td>c.padhi</td></tr>
+<tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2898953002'>Remove SupportsWeakPtr inheritance from GLES2Decoder</a></td><td>c.padhi</td></tr>
 <tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2888403004'>[css-typed-om] replace all attribute with DOMMatrix in cssMatrixComponent</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2898893002'>Use SetSelection in ExecuteSelectToMark()</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2899473003'>PaymentHandler: Remove unnecessary parameters in DidHasPaymentInstrument.</a></td><td>jinho.bang</td></tr>
