--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2874183002'>[Android] Fix Text selection with Stylus button pressed from Android M</a></td><td>mahesh.ma</td></tr>
+<tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2872853003'>Create BUILD.gn files for //media/formats.</a></td><td>a.suchit</td></tr>
 <tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2902693002'>Use base::Optional<int32_t> in H264POC::ComputePicOrderCnt(...)</a></td><td>c.padhi</td></tr>
 <tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2898953002'>Remove SupportsWeakPtr inheritance from GLES2Decoder</a></td><td>c.padhi</td></tr>
 <tr><td>2017-05-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2888403004'>[css-typed-om] replace all attribute with DOMMatrix in cssMatrixComponent</a></td><td>hs1217.lee</td></tr>
