--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-25</td><td>chromium</td><td><a href='https://codereview.chromium.org/2888523002'>Created new target unit_tests in //media/formats.</a></td><td>a.suchit</td></tr>
 <tr><td>2017-05-25</td><td>chromium</td><td><a href='https://codereview.chromium.org/2902723006'>Measure the usage of <ol>.start with |reversed| and no |start| attribute.</a></td><td>shanmuga.m</td></tr>
 <tr><td>2017-05-25</td><td>chromium</td><td><a href='https://codereview.chromium.org/2906493003'>Get rid of FrameSelection::SetSelectedRange()</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-05-25</td><td>chromium</td><td><a href='https://codereview.chromium.org/2899263002'>Update WebScreenOrientationType to have a Last enum member.</a></td><td>uzair.jaleel</td></tr>
