--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-26</td><td>chromium</td><td><a href='https://codereview.chromium.org/2901753002'>Make VDA::Config's converting constructor explicit</a></td><td>c.padhi</td></tr>
 <tr><td>2017-05-26</td><td>chromium</td><td><a href='https://codereview.chromium.org/2896183002'>Rename StringCallback to FunctionStringCallback.</a></td><td>shanmuga.m</td></tr>
 <tr><td>2017-05-25</td><td>chromium</td><td><a href='https://codereview.chromium.org/2887713002'>PaymentHandler: Merge PaymentAppRequest and PaymentRequestEvent.</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-05-25</td><td>chromium</td><td><a href='https://codereview.chromium.org/2888523002'>Created new target unit_tests in //media/formats.</a></td><td>a.suchit</td></tr>
