--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-30</td><td>chromium</td><td><a href='https://codereview.chromium.org/2897953002'>Remove loop unrolling code in UpdateYUVComponentSizes</a></td><td>nagarajan.n</td></tr>
 <tr><td>2017-05-29</td><td>chromium</td><td><a href='https://codereview.chromium.org/2892403003'>Simplify image decoder selection.</a></td><td>nagarajan.n</td></tr>
 <tr><td>2017-05-29</td><td>chromium</td><td><a href='https://codereview.chromium.org/2912753004'>[css-typed-om] use USVString for URLs at CSSURLImageValue.</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-05-26</td><td>chromium</td><td><a href='https://codereview.chromium.org/2901753002'>Make VDA::Config's converting constructor explicit</a></td><td>c.padhi</td></tr>
