--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-05-31</td><td>chromium</td><td><a href='https://codereview.chromium.org/2906883002'>Form reset should clear the dirty flag of HTMLOptionElement</a></td><td>sujiths.s</td></tr>
 <tr><td>2017-05-31</td><td>chromium</td><td><a href='https://codereview.chromium.org/2910813002'>Editor::executeCommand() should have DCEHCK about frame is active</a></td><td>tripta.g</td></tr>
 <tr><td>2017-05-30</td><td>chromium</td><td><a href='https://codereview.chromium.org/2897953002'>Remove loop unrolling code in UpdateYUVComponentSizes</a></td><td>nagarajan.n</td></tr>
 <tr><td>2017-05-29</td><td>chromium</td><td><a href='https://codereview.chromium.org/2892403003'>Simplify image decoder selection.</a></td><td>nagarajan.n</td></tr>
