--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix the bug which disappear card icon list.</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-06-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2934703002'>Replace sequence with FrozenArray in PaymentRequestEvent.idl.</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2930573005'>Use ContainsValue() instead of std::find() in ui/android, ui/base and ui/views</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2926383003'>Use ContainsValue() instead of std::find() in ui/aura, ui/display and ui/events</a></td><td>tripta.g</td></tr>
