--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2933023002'>PaymentHandler: PaymentRequestEvent.total should be |object| type.</a></td><td>jinho.bang</td></tr>
+<tr><td>2017-06-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925693003'>Making CSD ReportType enum consistent.</a></td><td>nikhil.sahni</td></tr>
 <tr><td>2017-06-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2935673002'>Use ContainsValue() instead of std::find() in device/bluetooth and device/hid</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2900603003'>Successful translation erroneously reported on page with too little text</a></td><td>gajendra.n</td></tr>
 <tr><td>2017-06-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix the bug which disappear card icon list.</a></td><td>hs1217.lee</td></tr>
