--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2911643002'>Create BUILD.gn files for //media/filters.</a></td><td>a.suchit</td></tr>
 <tr><td>2017-06-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2839993002'>[Android] Adding Smart GO/NEXT feature in Chrome</a></td><td>ajith.v</td></tr>
 <tr><td>2017-06-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2933023002'>PaymentHandler: PaymentRequestEvent.total should be |object| type.</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-06-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925693003'>Making CSD ReportType enum consistent.</a></td><td>nikhil.sahni</td></tr>
