--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-16</td><td>chromium</td><td><a href='https://codereview.chromium.org/2709763004'>Revert of Make WebKitCSSMatrix an alias of DOMMatrix (patchset #16 id:300001 of https://codereview.chromium.org/2709763004/ )</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-06-16</td><td>chromium</td><td><a href='https://codereview.chromium.org/2938163003'>Use ContainsValue() instead of std::find() in tools/</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-16</td><td>chromium</td><td><a href='https://codereview.chromium.org/2904783003'>Allow user to select text in Settings UI</a></td><td>gajendra.n</td></tr>
 <tr><td>2017-06-15</td><td>chromium</td><td><a href='https://codereview.chromium.org/2907143002'>Remove unnecessary decoded frame size overflow check</a></td><td>nagarajan.n</td></tr>
