--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-26</td><td>chromium</td><td><a href='https://codereview.chromium.org/2950263003'>Use ContainsValue() instead of std::find() in extensions/</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2948593002'>Relanding [Android] Adding Smart GO/NEXT feature in Chrome</a></td><td>ajith.v</td></tr>
 <tr><td>2017-06-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2951763002'>CSS Properties & Values API:replace transform-function with transform-list.</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-06-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2914173002'>Removed the use of file_thread_task_runner across</a></td><td>sujiths.s</td></tr>
