--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-28</td><td>chromium</td><td><a href='https://codereview.chromium.org/2945803002'>Use ContainsValue() instead of std::find() in ios/</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-27</td><td>chromium</td><td><a href='https://codereview.chromium.org/2947593005'>Use ContainsValue() instead of std::find() in chrome/browser/ui/</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-26</td><td>chromium</td><td><a href='https://codereview.chromium.org/2950263003'>Use ContainsValue() instead of std::find() in extensions/</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2948593002'>Relanding [Android] Adding Smart GO/NEXT feature in Chrome</a></td><td>ajith.v</td></tr>
