--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-29</td><td>chromium</td><td><a href='https://codereview.chromium.org/2958223002'>Use ContainsValue() instead of std::find() in chrome/browser and chrome/common</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-28</td><td>chromium</td><td><a href='https://codereview.chromium.org/2937043002'>CSS Properties & Values API: Compute initial values for transfrom-list type.</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-06-28</td><td>chromium</td><td><a href='https://codereview.chromium.org/2945803002'>Use ContainsValue() instead of std::find() in ios/</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-27</td><td>chromium</td><td><a href='https://codereview.chromium.org/2947593005'>Use ContainsValue() instead of std::find() in chrome/browser/ui/</a></td><td>tripta.g</td></tr>
