--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-07-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/568066'>Fix names of parameters under X86/MIPS after Blink rename.</a></td><td>Hyemi Shin</td></tr>
 <tr><td>2017-07-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/577336'>Create BUILD.gn files for //media/renderers.</a></td><td>Suchit Agrawal</td></tr>
 <tr><td>2017-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/574904'>Remove PaymentDetailsError runtime flag (status=stable)</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/576234'>Implements CSSPropertyAPI for -webkit-locale/-webkit-hyphenate-character</a></td><td>Rob Buis</td></tr>
