--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-07-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/582668'>PaymentHandler: Make InvokePaymentAppCallback to base::OnceCallback.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-07-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/552597'>Implement <data> element</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-07-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/580730'>Create BUILD.gn files for //media/device_monitors.</a></td><td>Suchit Agrawal</td></tr>
 <tr><td>2017-07-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/581327'>[RLS] Remove scrollbar-prevent-default.html from TestExpectations</a></td><td>Munukutla Subrahmanya Praveen</td></tr>
