--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/586353'>Change the wrong condition in UpdateFavicon</a></td><td>deejay</td></tr>
 <tr><td>2017-07-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/579318'>Migrate MediaStream IPC messages to Mojo - part 3</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-07-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/581932'>Implements CSSPropertyAPI for various SVG properties</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-07-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/579627'>[CSS Typed OM] throw typeError if relative units are used.</a></td><td>Hwanseung Lee</td></tr>
