--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/592239'>Remove superfluous int cast</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/586488'>Add return functions for preventing crash</a></td><td>DongJun Kim</td></tr>
 <tr><td>2017-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/594607'>PaymentHandler: Refactor PaymentAppProviderImpl and InvocationCallback.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/590871'>Replace SupportsWeakPtr with WeakPtrFactory in CommandBufferProxyImpl</a></td><td>Uzair Jaleel</td></tr>
