--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/595787'>Avoid redundant equality check in SelectionEditor::SetSelection</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/591727'>Introduce ComputeVisibleExtent() in SelectionModifier</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/574992'>PaymentHandler: Implement CanMakePaymentEvent in content side.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/592239'>Remove superfluous int cast</a></td><td>Rob Buis</td></tr>
