--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/590078'>Implements CSSPropertyAPI for width/height properties</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/596107'>Migrate MediaStream IPC messages to Mojo - part 5</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-08-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/597475'>Report GenerateStream and OpenDevice failures to renderer</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-08-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/589607'>Implements CSSPropertyAPI for logical width/height properties</a></td><td>Rob Buis</td></tr>
