--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/604632'>Replace DCHECK with an early return if |dispatcher| is null or not bound</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-08-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/574514'>[Android] Relanding Smart GO NEXT feature in Android Chrome 2/2</a></td><td>AJITH KUMAR V</td></tr>
 <tr><td>2017-08-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/603210'>InnerHTML/outerHTML serializer should include attribute's prefix</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-08-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/603747'>[Autofill] Only show full street addresses in credit card editor</a></td><td>Hwanseung Lee</td></tr>
