--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/593510'>Remove SVGPathElement.getPathSegAtLength.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/600147'>Implement <time> HTML element</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/603427'>Make ComputeSelectionForInsertion to return SelectionInDOMTree</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/604632'>Replace DCHECK with an early return if |dispatcher| is null or not bound</a></td><td>Chandan Padhi</td></tr>
