--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/616861'>PaymentHandler: openWindow() should return Promise<WindowClient?>.</a></td><td>Jinho Bang</td></tr>
+<tr><td>2017-08-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/616548'>Ensure media::AudioParameters used for |input| are valid</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2017-08-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/602389'>Add max retries to an HttpNetworkTransaction when an HTTP2 or QUIC related</a></td><td>Biljith Jayan</td></tr>
 <tr><td>2017-08-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/601054'>Implements CSSPropertyAPI for max-width/max-height properties</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-08-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/615663'>Implements CSSPropertyAPI for width/height properties</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-08-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/605416'>Use SelectionForUndoStep in CompositeEditCommand::ApplyCommandToComposite</a></td><td>tanvir.rizvi</td></tr>
