--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/616376'>Get RootEditableElement from SelectionForUndoStep</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618213'>Revert "Use SelectionForUndoStep in ApplyStyleCommand"</a></td><td>Tanvir Rizvi</td></tr>
 <tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618312'>Move MockMojoMediaStreamDispatcherHost class to its own files</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/605867'>Remove MediaStreamMsgStart and its references</a></td><td>Chandan Padhi</td></tr>
