--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/619612'>Implements CSSPropertyAPI for clip/origin longhand properties</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-08-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618215'>Update <ol>.start getter to default to 1.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-08-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/616410'>Use SelectionForUndoStep in InsertTextCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618211'>Revert "Revert "ApplyStyleCommand position should use SelectionForUndoStep""</a></td><td>Tanvir Rizvi</td></tr>
