--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/622450'>PaymentRequest: PaymentCurrencyAmount.currency to match updated spec.</a></td><td>Jinho Bang</td></tr>
+<tr><td>2017-08-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/628476'>Cleanup MediaStream unittests</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-08-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/601649'>PaymentRequest: supportedMethods should be DOMString.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-08-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/628858'>[RLS] LocalFrameView::ScrollOrigin() should be 0,0</a></td><td>srirama</td></tr>
 <tr><td>2017-08-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/620368'>Minimize thread hops in MediaStreamDispatcherHost</a></td><td>Chandan Padhi</td></tr>
