--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/638190'>Use SelectionForUndoStep in ApplyStyleCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/610284'>Create unit_tests target in //media/device_monitors.</a></td><td>Suchit Agrawal</td></tr>
 <tr><td>2017-08-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/635184'>Use ToIntSize in LocalFrameView::MinimumScrollOffsetInt()</a></td><td>srirama</td></tr>
 <tr><td>2017-08-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/622450'>PaymentRequest: PaymentCurrencyAmount.currency to match updated spec.</a></td><td>Jinho Bang</td></tr>
