--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/643366'>Changing <style> element's type attribute should reflect in CSS.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-09-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/643447'>Replace StreamDeviceInfo with MediaStreamDevice in AudioInputDeviceManager</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/644966'>Create unit_tests target in //media/filters.</a></td><td>Suchit Agrawal</td></tr>
 <tr><td>2017-08-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/637930'>Create unit_tests target in //media/formats.</a></td><td>Suchit Agrawal</td></tr>
