--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/647948'>PaymentHandler: Fix a bug when setting multiple instruments with icons per SW.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-09-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/637044'>PaymentHandler: Implement CanMakePaymentEvent on Android.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-09-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/647064'>Remove StreamDeviceInfo from VideoCaptureImplManager</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/643366'>Changing <style> element's type attribute should reflect in CSS.</a></td><td>Shanmuga Pandi M</td></tr>
