--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/650074'>Remove StreamDeviceInfo and its remaining references</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2017-09-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/650278'>Remove StreamDeviceInfo from MediaStreamDispatcherEventHandler and its subclasses</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/649591'>Remove StreamDeviceInfo from MediaStreamDispatcher</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/647514'>Define MediaStreamDevices as a typedef instead of a class</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/650689'>Remove AddParsedProperty</a></td><td>Rob Buis</td></tr>
