--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/669391'>Remove default value for title parameter</a></td><td>Rob Buis</td></tr>
+<tr><td>2017-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/671324'>Fix marquee-element.html</a></td><td>Rob Buis</td></tr>
+<tr><td>2017-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/671191'>Rename starAtom, nullAtom and emptyAtom in comments</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/670906'>Rename RegisteredEventListener::listener() to callback() to match the specification</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/669462'>PaymentHandler: Fix [Exposed] extended attribute in PaymentInstruments.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/647353'>Change default value of aria-valuemax on some roles</a></td><td>DongJun Kim</td></tr>
